kubernetes/apps/observability/pushgateway/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pushgateway
spec:
  hostnames:
    - pushgateway.narden.au
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: pushgateway-prometheus-pushgateway
          namespace: observability
          port: 9091
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
